Fix value of flex-wrap allows better responsivity (its bad i know it)

--- a/frontend/pages/transactions/transactions-style.css
+++ b/frontend/pages/transactions/transactions-style.css
@@ -3,7 +3,7 @@
 .balance-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: 1;
+  flex-wrap: wrap;
   gap: 30px;
 
   margin-bottom: var(--large-spacing);
